[doc] Update README to cover all demos